# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import storageRouter from "./storage";
 import productsRouter from "./products";
+import categoriesRouter from "./categories";
 import ordersRouter from "./orders";
 import paymentsRouter from "./payments";
 import settingsRouter from "./settings";
@@ -12,6 +13,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(storageRouter);
 router.use(productsRouter);
+router.use(categoriesRouter);
 router.use(ordersRouter);
 router.use(paymentsRouter);
 router.use(settingsRouter);
