# lib/db/src/schema/index.ts
@@ -18,6 +18,7 @@
 //   export type Post = typeof postsTable.$inferSelect;
 
 export * from "./products";
+export * from "./categories";
 export * from "./orders";
 export * from "./appSettings";
 export * from "./webhookSecurityEvents";
